libs/pavex_cli/tests/ui_tests/output_parameter_cannot_be_handled/expectations/stderr.txt
[31m[1mERROR[0m[39m: 
  × I do not know how to handle the type returned by `app::c`.
    ╭─[src/lib.rs:8:1]
  8 │     let mut bp = AppBlueprint::new();
  9 │     bp.route(f!(crate::c), "/home");
    ·              ──────┬─────
    ·                    ╰── The request handler was registered here
 10 │     bp
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:2:1]
 2 │ 
 3 │ pub fn c() -> Box<dyn std::error::Error> {
   ·               ─────────────┬────────────
   ·                            ╰── The output type that I cannot handle
 4 │     todo!()
   ╰────